force-app/main/default/objects/CB_Partner_Config__c/CB_Partner_Config__c.object-meta.xml
<CustomObject>
    <description>Partner API configuration and status</description>
    <label>CB Partner Config</label>
    <nameField>
        <displayFormat>PTR-{000000}</displayFormat>
        <label>CB Partner Config Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CB Partner Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>