force-app/main/default/objects/CB_Partner_Config__c/fields/API_Client_Id__c.field-meta.xml
<CustomField>
    <fullName>API_Client_Id__c</fullName>
    <label>API Client Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>