force-app/main/default/objects/CB_Partner_Config__c/fields/API_Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>API_Client_Secret__c</fullName>
    <description>Partner API key validated via X-API-Key header</description>
    <label>API Client Secret</label>
    <length>80</length>
    <type>Text</type>
</CustomField>