force-app/main/default/objects/CB_Partner_Config__c/fields/Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account__c</fullName>
    <label>Partner Account</label>
    <referenceTo>Account</referenceTo>
    <deleteConstraint>Restrict</deleteConstraint>
    <relationshipLabel>CB Partner Configs</relationshipLabel>
    <relationshipName>CB_Partner_Configs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>