force-app/main/default/objects/CB_Partner_Config__c/fields/Partner_Id__c.field-meta.xml
<CustomField>
    <fullName>Partner_Id__c</fullName>
    <externalId>true</externalId>
    <label>Partner Id</label>
    <length>50</length>
    <unique>true</unique>
    <type>Text</type>
</CustomField>