force-app/main/default/objects/CB_Partner_Config__c/fields/Rate_Tier__c.field-meta.xml
<CustomField>
    <fullName>Rate_Tier__c</fullName>
    <label>Rate Tier</label>
    <valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Standard</fullName><default>false</default><label>Standard</label></value><value><fullName>Premium</fullName><default>false</default><label>Premium</label></value><value><fullName>Enterprise</fullName><default>false</default><label>Enterprise</label></value></valueSetDefinition></valueSet>
    <type>Picklist</type>
</CustomField>