force-app/main/default/objects/CB_Partner_Config__c/fields/Scopes__c.field-meta.xml
<CustomField>
    <fullName>Scopes__c</fullName>
    <label>Scopes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>