force-app/main/default/objects/CB_Partner_Config__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Prospect</fullName><default>false</default><label>Prospect</label></value><value><fullName>Onboarding</fullName><default>false</default><label>Onboarding</label></value><value><fullName>Certification</fullName><default>false</default><label>Certification</label></value><value><fullName>Active</fullName><default>false</default><label>Active</label></value><value><fullName>Suspended</fullName><default>false</default><label>Suspended</label></value><value><fullName>Offboarded</fullName><default>false</default><label>Offboarded</label></value></valueSetDefinition></valueSet>
    <type>Picklist</type>
</CustomField>