force-app/main/default/objects/CB_Partner_Config__c/fields/Webhook_URL__c.field-meta.xml
<CustomField>
    <fullName>Webhook_URL__c</fullName>
    <label>Webhook URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>