force-app/main/default/objects/CB_Partner_Config__c/listViews/All_Partner_Configs.listView-meta.xml
<ListView>
    <fullName>All_Partner_Configs</fullName>
    <columns>NAME</columns>
    <columns>Partner_Id__c</columns>
    <columns>Partner_Account__c</columns>
    <columns>Status__c</columns>
    <columns>Rate_Tier__c</columns>
    <columns>API_Client_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Partner Configs</label>
</ListView>